Made HCL AST on records Use TextBlocks in formatting test, minor enhancements